{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "NoteSelector",
            "id": "9407347b-6826-4bd1-a7b4-78828bb77205",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "23a6235f-58a8-4acc-857a-d1751687b1f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sing",
                    "type": "Value",
                    "id": "51e40b6b-659c-4458-8139-35a60333c079",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockNote",
                    "type": "Button",
                    "id": "eff156e8-0cac-4e4c-8cc4-6b4b8228f265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchWheelType",
                    "type": "Button",
                    "id": "bfef0087-2834-4a51-923f-7c192b36e847",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a882b611-a808-4386-959e-6eda97e8875a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3c72de4-5746-474a-ae7c-21c466ed4244",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d74f31d-ae83-4d50-b6af-bd6550046dfa",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2479c25b-91b1-4652-b806-314f0806d4fd",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6ca222a-6098-4e99-9af7-0dfdda7a8b6b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWheelType",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "141f1024-2864-4acb-9c4d-0ff8ace6cb07",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2b8cea39-9e99-42b8-82e7-d466ad2f5b69",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ecbea8fe-64c8-495a-b322-afdf10cbfd4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7ceebe8-5df4-4b2c-a5a8-0f304288d687",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcce6fa0-70b8-4fd0-bdaf-fe5ed06f6df3",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameManager",
            "id": "3df114dd-e03b-4545-a7a9-35c00b7179bb",
            "actions": [
                {
                    "name": "ReloadScene",
                    "type": "Button",
                    "id": "a7b1c764-dead-43b4-a05f-23928419ac23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35cd41a8-f4d3-4f3e-83c6-58189b41263f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}